--- a/src/index.html
+++ b/src/index.html
@@ -71,5 +71,90 @@
             </div>
         </div>
     </div>
+    <div class="max-w-[1200px] m-auto">
+        <div class="md:max-w-[800px] m-auto">
+            <h2 class="text-[#141B41] text-center md:text-[30px] text-[25px] font-semibold">Стань нашим партнером и начни зарабатывать: </h2>
+        <p class="text-[#72727E] py-[10px] text-center ">Автоматизируй свой бизнес вместе с нами. Подключись к нашей системе бронирования, что бы получать новых клиентов и распределить нагрузку равномерно на весь день. Мы предоставляем удобные инструменты для формирования отчетов в несколько кликов и многое другое. </p>
+        </div>
+        <div class="flex px-[10px] text-center pt-[60px] md:flex-row flex-col gap-[50px]">
+            <div class="flex flex-col shadow-2xl py-[30px] rounded-md px-[30px] items-center">
+                <img src="./Document.svg" alt="">
+                <p class="text-[#141B41] pt-[20px]">Просмотривайте
+                    историю заказа</p>
+            </div>
+            <div class="flex flex-col shadow-2xl py-[30px] rounded-md px-[30px] items-center">
+                <img src="./Calendar.svg" alt="">
+                <p class="pt-[20px]">Создание отчета
+                    неделя/месяц/год </p>
+            </div>
+            <div class="flex flex-col shadow-2xl py-[30px] rounded-md px-[40px] items-center">
+                <img src="./Chat.svg" alt="">
+                <p class="pt-[20px]">Обратная связь
+                    от клиентов </p>
+            </div>
+            <div class="flex flex-col shadow-2xl py-[30px] rounded-md px-[20px] items-center">
+                <img src="./Star.svg" alt="">
+                <p class="pt-[20px]">Контроль качества
+                    работы сотрудников</p>
+            </div>
+            <div class="flex flex-col shadow-2xl py-[30px] rounded-md px-[40px] items-center">
+                <img src="./Wallet.svg" alt="">
+                <p class="pt-[20px]">Бесконтактная
+                    оплата работы</p>
+            </div>
+        </div>
+    </div>
+    <div class="text-center mt-[20px]">
+        <button class=" text-white py-[8px] bg-[#446DF6] px-[20px]  rounded-md " >Стать партнером</button>
+    </div>
+
+    <div class="px-[20px] pt-[0px] md:px-[0px] max-w-[1200px] md:rounded-3xl mt-[100px] bg-[#446DF6] m-auto md:flex-row flex-col flex md:text-start text-center  items-center">
+        <div class="md:pr-[200px] md:pl-[100px] md:pt-[0px] pt-[50px]">
+            <h2 class="md:text-start text-center md:text-[30px] text-[23.2px] font-bold inline text-white ">Хватит тратить свое <br>
+                время в очередях</h2> 
+            
+            <br>
+            <p class="text-white py-[20px]">
+                Приложение скоро будет доступно для бета <br>
+тестирования в AppStore и Google Play
+            </p>
+            <div class="flex gap-[20px] md:flex-row md:w-[100%] w-[70%] md:pl-[0px] pl-[100px] flex-col">
+                <img src="./image 1457.svg" alt="">
+                <img src="./image 1456.svg" alt="">
+            </div>
+        </div>
+        <img src="./Mask Group (9).svg" class="md:inline hidden w-[40%]" alt="">
+        <img src="./Mask Group (10).svg" class="md:hidden pt-[20px]  w-[100%]" alt="">
+    </div>
+    <div class="max-w-[1200px] m-auto pt-[50px] flex md:flex-row px-[10px] flex-col md:text-start text-center justify-between">
+        <div>
+            <h2 class="text-[#141B41] font-semibold text-[20px] md:text-[30px]">Отзывы о приложении</h2>
+            <p class="text-[#72727E] md:w-[60%] ">Таким образом консультация с широким активом влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. Разнообразный и богатый опыт сложившаяся структура организации обеспечивает широкому кругу (специалистов)
+                участие в формировании модели развития.</p>
+                <div class="pt-[50px] flex md:flex-row flex-col py-[30px] gap-[20px] items-center">
+                    <img src="./Mask Group (11).svg" alt="">
+                    <div>
+                        <p class="text-[18px]">John Doe</p>
+                        <p class=" text-[15px] text-[#72727E]">Водитель</p>
+                    </div>
+                </div>
+        </div>
+        <div class="flex items-center justify-center ">
+            <img src="./Group 17.svg" alt="">
+            <img src="./Group 18.svg" alt="">
+        </div>
+    </div>
+    <footer class="bg-[#141B41] ">
+        <div class=" px-[20px]  max-w-[1200px] mt-[50px] md:flex-row flex-col  m-auto text-center pt-[20px] justify-between items-center text-[#E9ECF5] flex gap-[20px]">
+            <img src="./GetWash.svg" alt="">
+        <div class="md:gap-[20px]  md:flex ">
+            <p>Как использовать</p>
+            <p>Партнерам</p>
+            <p>Скачать</p>
+            <p>Отзывы</p>
+        </div>
+        <button class="border-solid  py-[8px] px-[20px]  rounded-md border-gray-300 border-[1px]">Получить доступ</button>
+        </div>
+    </footer>
 </body>
 </html> 
